// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render courses 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 8,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 8,
        "left": 0,
        "right": 0,
        "top": 8,
      }
    }
    data={
      Array [
        Object {
          "color": "#112233",
          "course_code": "rn 101",
          "default_view": "wiki",
          "id": "1",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Learn React Native",
          "short_name": "rn",
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 1,
      }
    }
    enableEmptySections={true}
    itemsPerRow={2}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 8,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#000",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "height": 160,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 8,
              },
            ]
          }
          testID="rn 101"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Learn React Native"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#112233",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Learn React Native user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="courseCard.kabob_1"
                underlayColor="#ffffff00"
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#112233",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                rn 101
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "flex": 1,
              "margin": 8,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`render courses pending 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 8,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 8,
        "left": 0,
        "right": 0,
        "top": 8,
      }
    }
    data={
      Array [
        Object {
          "color": "#112233",
          "course_code": "rn 101",
          "default_view": "wiki",
          "id": "1",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Learn React Native",
          "short_name": "rn",
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 1,
      }
    }
    enableEmptySections={true}
    itemsPerRow={2}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 8,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#000",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "height": 160,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 8,
              },
            ]
          }
          testID="rn 101"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Learn React Native"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#112233",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Learn React Native user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="courseCard.kabob_1"
                underlayColor="#ffffff00"
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#112233",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                rn 101
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "flex": 1,
              "margin": 8,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`render narrow width 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 8,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 8,
        "left": 0,
        "right": 0,
        "top": 8,
      }
    }
    data={
      Array [
        Object {
          "color": "#112233",
          "course_code": "rn 101",
          "default_view": "wiki",
          "id": "1",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Learn React Native",
          "short_name": "rn",
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 1,
      }
    }
    enableEmptySections={true}
    itemsPerRow={2}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 8,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 8,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#000",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "height": 160,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 8,
              },
            ]
          }
          testID="rn 101"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Learn React Native"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#112233",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Learn React Native user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="courseCard.kabob_1"
                underlayColor="#ffffff00"
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#112233",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                rn 101
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "flex": 1,
              "margin": 8,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`render wide width 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "marginHorizontal": 12,
        "overflow": "visible",
      },
    ]
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 12,
        "left": 0,
        "right": 0,
        "top": 12,
      }
    }
    data={
      Array [
        Object {
          "color": "#112233",
          "course_code": "rn 101",
          "default_view": "wiki",
          "id": "1",
          "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
          "is_favorite": true,
          "name": "Learn React Native",
          "short_name": "rn",
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 1,
      }
    }
    enableEmptySections={true}
    itemsPerRow={3}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    onLayout={[Function]}
    onRefresh={[Function]}
    placeholderStyle={
      Object {
        "flex": 1,
        "margin": 12,
      }
    }
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderFooter={[Function]}
    renderHeader={[Function]}
    renderItem={[Function]}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={undefined}
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "flex": 1,
        "overflow": "visible",
      }
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 12,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <TouchableHighlight
          accessible={false}
          onLayout={[Function]}
          onPress={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "#000",
                "borderColor": "#e3e3e3",
                "borderRadius": 4,
                "borderWidth": 0.5,
                "height": 160,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.2,
                "shadowRadius": 1,
              },
              Object {
                "flex": 1,
                "height": 0,
                "margin": 12,
              },
            ]
          }
          testID="rn 101"
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
              <View
                accessibilityLabel="Learn React Native"
                accessibilityTraits="button"
                accessible={true}
                style={
                  Object {
                    "backgroundColor": "#112233",
                    "bottom": 0,
                    "left": 0,
                    "opacity": 0.8,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
              <TouchableHighlight
                accessibilityLabel="Open Learn React Native user preferences"
                accessibilityTraits="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "height": 43,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                    "width": 43,
                  }
                }
                testID="courseCard.kabob_1"
                underlayColor="#ffffff00"
              >
                <Image
                  source={1}
                  style={
                    Object {
                      "height": 18,
                      "position": "absolute",
                      "right": 8,
                      "top": 10,
                      "width": 18,
                    }
                  }
                />
              </TouchableHighlight>
            </View>
            <View
              accessible={false}
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#112233",
                      "fontWeight": "600",
                      "marginTop": 8,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
              <Text
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#8B969D",
                      "fontSize": 12,
                      "fontWeight": "600",
                      "marginTop": 2,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                rn 101
              </Text>
            </View>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "flex": 1,
              "margin": 12,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "margin": 12,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
